--- a/mcpi-client/Cargo.toml
+++ b/mcpi-client/Cargo.toml
@@ -11,3 +11,6 @@ futures = "0.3.29"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 reqwest = { version = "0.11.22", features = ["json"] }
+regex = "1.10.2"
+url = "2.5.0"
+clap = { version = "4.4.10", features = ["derive"] }
