--- a/mcpi-server/Cargo.toml
+++ b/mcpi-server/Cargo.toml
@@ -13,3 +13,5 @@ tower-http = { version = "0.4.4", features = ["cors", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 futures = "0.3.29"
+fastrand = "2.3.0"
+chrono = "0.4.40"
