--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -1,38 +1,9 @@
-# Use the official Rust image as the base image
-FROM rust:1.75-slim AS builder
-
-# Set working directory
+FROM rust:1 as build-env
 WORKDIR /app
-
-# Copy the entire project
-COPY . .
-
-# Install build dependencies
-RUN apt-get update && \
-    apt-get install -y build-essential pkg-config libssl-dev
-
-# Build the server in release mode
+COPY . /app
 RUN cargo build --release --bin mcpi-server
-
-# Create a slim runtime image
-FROM debian:bullseye-slim
-
-# Install runtime dependencies
-RUN apt-get update && \
-    apt-get install -y ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
-
-# Set working directory
-WORKDIR /app
-
-# Copy the built binary from the builder stage
-COPY --from=builder /app/target/release/mcpi-server /app/mcpi-server
-
-# Copy data directory
-COPY data /app/data
-
-# Expose the default port
+FROM gcr.io/distroless/cc-debian12
+COPY --from=build-env /app/target/release/mcpi-server /
+COPY --from=build-env /app/data /data
 EXPOSE 3001
-
-# Set the entrypoint
-ENTRYPOINT ["/app/mcpi-server"]
+CMD ["./mcpi-server"]
