--- a/mcpi-client/Cargo.toml
+++ b/mcpi-client/Cargo.toml
@@ -14,3 +14,4 @@ reqwest = { version = "0.11.22", features = ["json"] }
 regex = "1.10.2"
 url = "2.5.0"
 clap = { version = "4.4.10", features = ["derive"] }
+hickory-resolver = "0.25.1"
