--- a/mcpi-server/Cargo.toml
+++ b/mcpi-server/Cargo.toml
@@ -15,3 +15,4 @@ tracing-subscriber = "0.3.18"
 futures = "0.3.29"
 fastrand = "2.3.0"
 chrono = "0.4.40"
+uuid = { version = "1.4", features = ["v4"] }
