--- a/mcpi-server/Cargo.toml
+++ b/mcpi-server/Cargo.toml
@@ -5,14 +5,17 @@ edition = "2021"
 
 [dependencies]
 mcpi-common = { path = "../mcpi-common" }
-axum = { version = "0.6.20", features = ["ws"] }
+axum = { version = "0.7", features = ["ws"] }
 tokio = { version = "1.34.0", features = ["full"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-tower-http = { version = "0.4.4", features = ["cors", "trace"] }
+tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 futures = "0.3.29"
 fastrand = "2.3.0"
 chrono = "0.4.40"
 uuid = { version = "1.4", features = ["v4"] }
+url = "2.5"
+rand = "0.8"
+tower = "0.4" # Or a compatible version with tower-http 0.5
