--- a/mcpi-client/Cargo.toml
+++ b/mcpi-client/Cargo.toml
@@ -6,12 +6,18 @@ edition = "2021"
 [dependencies]
 mcpi-common = { path = "../mcpi-common" }
 tokio = { version = "1.44.1", features = ["full"] }
-tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] } # Or rustls features
 futures = "0.3.29"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-reqwest = { version = "0.11.22", features = ["json"] }
-regex = "1.10.2"
+# Add "stream" feature to reqwest
+reqwest = { version = "0.11.22", features = ["json", "stream"] }
+regex = "1.10.2" # Seems unused based on last code? Remove if not needed.
 url = "2.5.0"
 clap = { version = "4.4.10", features = ["derive"] }
 rand = "0.8"
+bytes = "1"
+# Add tokio-util with "io" feature
+tokio-util = { version = "0.7", features = ["io"] }
+tracing = "0.1" # Added for warn! macro if used later
+tracing-subscriber = { version = "0.3", features = ["env-filter"] } # For initializing tracing
